--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,69 +1,58 @@
 // app global css
 // Hyperion brand color
 .text-hyperion
-    color #2b819a
+  color #2b819a
 
 .bg-hyperion
-    background #2b819a
+  background #2b819a
 
-// class that allows user selection
+// prevent user selection
+.non-selectable-alias
+  -webkit-user-select none
+  -moz-user-select none
+  -ms-user-select none
+  user-select none
+
+// allows user selection
 .allow-select
-    -webkit-user-select text
-    -moz-user-select text
-    -ms-user-select text
-    user-select text
+  -webkit-user-select text
+  -moz-user-select text
+  -ms-user-select text
+  user-select text
 
-// CUSTOM DEFINITIONS
-$matmenu = $grey-8
+// Dark and light design definitions
+body.body--light
+  background $grey-1
+  color $grey-10
+  .q-menu 
+    background $grey-2
+  // with a base color of grey-10 for light mode, an opacity of 0.6 is too dimmed. This class is used by QDialogPlugin for the message part
+  .q-dialog__message
+    opacity 0.8
 
-:root
-  --q-color-matmenu $matmenu
+body.body--dark
+  background $dark
+  .q-menu 
+    background $grey-9
 
-.text-matmenu
-  color $matmenu !important
-  color var(--q-color-matmenu) !important
-.bg-matmenu
-  background $matmenu !important
-  background var(--q-color-matmenu) !important
+// other changes
+.q-drawer
+  background inherit
+.q-tab-panels
+  background inherit
+.q-table__container
+  background inherit
+.inset-shadow-1
+  box-shadow: 0 5px 7px -7px rgba(0,0,0,0.7) inset !important
 
-// dark faded and light style was removed with Quasar 1.0
-// Variables
-$light = #bdbdbd
-$dark = #424242
-$faded = #777
+// transform zooming classes
+.zoom-2
+  transform scale(1.2)
+// better readable tooltips
+.q-tooltip
+  font-size 90%
+  max-width 500px
 
-// CSS3 Root Variables
-:root
-  --q-color-light $light
-  --q-color-light-d darken($light, 10%)
-  --q-color-faded $faded
-  --q-color-dark $dark
-
-// CSS Classes
-.text-faded
-  color $faded !important
-  color var(--q-color-faded) !important
-.bg-faded
-  background $faded !important
-  background var(--q-color-faded) !important
-
-.text-light
-  color $light !important
-  color var(--q-color-light) !important
-.bg-light
-  background $light !important
-  background var(--q-color-light) !important
-
-.text-dark
-  color $dark !important
-  color var(--q-color-dark) !important
-.bg-dark
-  background $dark !important
-  background var(--q-color-dark) !important
-
-.text-faded
-  color $faded !important
-  color var(--q-color-faded) !important
-.bg-faded
-  background $faded !important
-  background var(--q-color-faded) !important
+// #########
+// FIXES
+// #########
